Fix overlapping team section

--- a/source/assets/stylesheets/styles/_team.scss
+++ b/source/assets/stylesheets/styles/_team.scss
@@ -2,7 +2,6 @@
   background-color: $team-background-color;
   box-sizing: border-box;
   padding: 28px 20px 0;
-  position: relative;
   min-height: 320px;
 }
 
